login页面增加找回密码链接

--- a/templates/sign/login.html
+++ b/templates/sign/login.html
@@ -38,7 +38,7 @@
 
             <div class="otherdiv">
                 <a href="{% url 'gift_platform_site:reg1' %}">免费注册</a>
-                <a href="#">忘记账号密码</a>
+                <a href="{% url 'gift_platform_site:findpwd' %}">忘记账号密码</a>
             </div>
             </form>
         </div>
