--- a/templates/sign/register2.html
+++ b/templates/sign/register2.html
@@ -116,7 +116,7 @@
                 <p></p>
                 <div>
                     <input type="checkbox" name="vehicle" value="Bike" />
-                    <p>我同意并遵守<a href="#">《一点礼品系统服务条款》</a></p>
+                    <p>我同意并遵守<a target="_blank" href="{% url 'gift_platform_site:protocol' %}">《一点礼品系统服务条款》</a></p>
                 </div>
             </div>
             <div>
