--- a/templates/share/base_layout_reg.html
+++ b/templates/share/base_layout_reg.html
@@ -43,7 +43,7 @@
     </div>
     <div class="copyright1">
         <div>
-            <a href="#">关于我们</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">帮助中心</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">售后服务</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">友情链接</a>
+            <a href="#">关于我们</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="{% url 'gift_platform_site:protocol' %}">帮助中心</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">售后服务</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">友情链接</a>
         </div>
         <div>
             <p>一点公司版权所有 © 1997-2018   食品经营许可证：JY133****0111719</p>
