--- a/templates/products/category_product_list.html
+++ b/templates/products/category_product_list.html
@@ -47,6 +47,9 @@
         <!--<a href="#" class="select sort-btn">人气↓</a>-->
     </div>
     <div class="product-list-wrap">
+        {% if products.count == 0 %}
+            <div class="no-data">~~空空如也~~</div>
+        {% endif %}
         {% for product in products %}
         <div class="product-list-item">
             <img class="image-cover" src="{{ product.images.first.productimage.url }}" />
