--- a/static_assets/gift_platform_site/style.css
+++ b/static_assets/gift_platform_site/style.css
@@ -133,6 +133,11 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
           .search-head-wrap .search-wrap .cart-wrap .cart-content .cart-footer a {
             text-decoration: none;
             color: #B19B70; }
+        .search-head-wrap .search-wrap .cart-wrap .cart-content .product-list .no-data {
+          color: #999999;
+          font-size: 12px;
+          margin: 8px 0px;
+          text-align: center; }
         .search-head-wrap .search-wrap .cart-wrap .cart-content .product-list ul {
           width: 193px; }
         .search-head-wrap .search-wrap .cart-wrap .cart-content .product-list li {
@@ -157,7 +162,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
             float: right;
             width: 15px;
             height: 15px;
-            background: url(/static/gift_platform_site/images/close.png) no-repeat;
+            background: url(f78b2e77f1f0eea475ce2b165b0c4d8e.png) no-repeat;
             background-size: 15px 15px; }
       .search-head-wrap .search-wrap .cart-wrap .cart {
         position: relative;
@@ -188,11 +193,11 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
         padding-right: 19px;
         margin-right: 7px; }
       .search-head-wrap .search-wrap .cart-wrap .drop-down {
-        background: url(/static/gift_platform_site/images/arrow_down.png) no-repeat;
+        background: url(c4d71663a3564c3713fdda9fc6a5334c.png) no-repeat;
         background-position: right;
         background-size: 12px 7px; }
       .search-head-wrap .search-wrap .cart-wrap .drop-up {
-        background: url(/static/gift_platform_site/images/arrow_up.png) no-repeat;
+        background: url(07a1995705407a455257a25d350d9811.png) no-repeat;
         background-position: right;
         background-size: 12px 7px; }
       .search-head-wrap .search-wrap .cart-wrap .split {
@@ -211,10 +216,16 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
 /*! sass-mixins - v0.12.0 - 2015-08-26 */
 .product-list-wrap .product-list-item {
   float: left; }
+
 .product-list-wrap .product-list-item:not(:nth-child(4n)) {
   margin-right: 24px; }
+
 .product-list-wrap .product-list-item {
   margin-top: 31px; }
+
+.product-list-wrap .no-data {
+  text-align: center;
+  color: #999999; }
 
 /*! sass-mixins - v0.12.0 - 2015-08-26 */
 .footer {
@@ -365,7 +376,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     width: 350px;
     height: 100%;
     background-color: #B19B70;
-    background-image: url(images/supplier.png); }
+    background-image: url(c8b13e36074f27a91f22d1546297dc2c.png); }
     .regtypes .choose1 div {
       border-radius: 100px;
       width: 108px;
@@ -393,7 +404,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     height: 100%;
     width: 350px;
     background-color: #B19B70;
-    background-image: url(images/giftcompany.png); }
+    background-image: url(8197297633ea478a32d2d3029ab830c0.png); }
     .regtypes .choose2 div {
       border-radius: 100px;
       width: 108px;
@@ -1164,7 +1175,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
 /*! sass-mixins - v0.12.0 - 2015-08-26 */
 .search {
   border: 2px #B19B70 solid;
-  background: url(/static/gift_platform_site/images/search.png) no-repeat;
+  background: url(cb63fec92c417b1fe3a1ffbdfc504309.png) no-repeat;
   -webkit-background-size: 25px 25px;
   background-size: 25px 25px;
   background-position-y: center;
@@ -1257,6 +1268,9 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
         .nav .cart-wrap .cart-content .cart-footer a {
           text-decoration: none;
           color: #B19B70; }
+      .nav .cart-wrap .cart-content .product-list .no-data {
+        color: #999999;
+        font-size: 12px; }
       .nav .cart-wrap .cart-content .product-list ul {
         width: 193px; }
       .nav .cart-wrap .cart-content .product-list li {
@@ -1281,7 +1295,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
           float: right;
           width: 15px;
           height: 15px;
-          background: url(../images/close.png) no-repeat;
+          background: url(f78b2e77f1f0eea475ce2b165b0c4d8e.png) no-repeat;
           background-size: 15px 15px; }
     .nav .cart-wrap .cart {
       position: relative;
@@ -1312,11 +1326,11 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
       padding-right: 19px;
       margin-right: 7px; }
     .nav .cart-wrap .drop-down {
-      background: url(/static/gift_platform_site/images/arrow_down.png) no-repeat;
+      background: url(c4d71663a3564c3713fdda9fc6a5334c.png) no-repeat;
       background-position: right;
       background-size: 12px 7px; }
     .nav .cart-wrap .drop-up {
-      background: url(/static/gift_platform_site/images/arrow_up.png) no-repeat;
+      background: url(07a1995705407a455257a25d350d9811.png) no-repeat;
       background-position: right;
       background-size: 12px 7px; }
     .nav .cart-wrap .split {
@@ -1407,6 +1421,8 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     text-decoration: none; }
   .query-area a:hover {
     color: #B19B70; }
+  .query-area .select {
+    color: #B19B70; }
   .query-area .query-name {
     font-weight: bold;
     display: inline-block; }
@@ -1460,6 +1476,10 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     font-size: 14px;
     width: 28px;
     padding: 6px 6px; }
+  .pagination .current-page {
+    background: #B19B70 !important; }
+    .pagination .current-page a {
+      color: #FFFFFF !important; }
   .pagination .page-item {
     padding: 0;
     display: inline-block;
@@ -1515,6 +1535,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
 .container .brand-list-item {
   float: left;
   margin-top: 50px; }
+
 .container .brand-list-item:not(:nth-child(5n)) {
   margin-right: 85px; }
 
@@ -1522,6 +1543,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
 .form-item label {
   color: #333333;
   font-size: 18px; }
+
 .form-item input, .form-item .drop-down, .form-item .drop-down1 {
   -webkit-border-radius: 53px;
   border-radius: 53px;
@@ -1535,11 +1557,13 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     color: #999999; }
   .form-item input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-item .drop-down1:-ms-input-placeholder {
     color: #999999; }
+
 .form-item input:focus, .form-item .drop-down:focus, .form-item .drop-down1:focus {
   outline: none; }
+
 .form-item .drop-down {
   padding: 9px 0px 9px 58px;
-  background: url(/static/gift_platform_site/images/arrow_down.png) no-repeat;
+  background: url(c4d71663a3564c3713fdda9fc6a5334c.png) no-repeat;
   background-position: 135px;
   background-size: 12px 7px;
   width: 100px;
@@ -1551,6 +1575,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     display: inline-block;
     float: right;
     margin-right: 28px; }
+
 .form-item .drop-down1 {
   background-position: 135px;
   background-size: 12px 7px;
@@ -1674,10 +1699,12 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
 
 .supplier-product-list .name {
   text-align: left; }
+
 .supplier-product-list .subscribe-btn {
   font-size: 14px;
   float: left !important;
   margin-top: 20px; }
+
 .supplier-product-list .social-btns-wrap {
   float: right; }
   .supplier-product-list .social-btns-wrap .social-btn {
@@ -1699,6 +1726,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     width: 430px;
     height: 430px;
     border: 1px solid #CCCCCC; }
+
 .product-details-wrap .product-details-header .product-images .product-image-list {
   float: left;
   margin-left: 12px; }
@@ -1710,6 +1738,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     .product-details-wrap .product-details-header .product-images .product-image-list ul li img {
       width: 78px;
       height: 78px; }
+
 .product-details-wrap .product-details-header .product-title {
   position: relative;
   margin-left: 60px;
@@ -1767,6 +1796,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     left: 0px;
     -webkit-border-radius: 64px;
     border-radius: 64px; }
+
 .product-details-wrap .product-details {
   margin-top: 30px; }
   .product-details-wrap .product-details .product-details-header {
@@ -1840,16 +1870,20 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
 .right-content .content .sex {
   float: left;
   width: 300px; }
+
 .right-content .content .mobile {
   float: left;
   width: 400px; }
+
 .right-content .content .group {
   margin-top: 38px; }
+
 .right-content .content .email {
   display: block;
   margin-top: 38px; }
   .right-content .content .email input, .right-content .content .email .form-item .drop-down, .form-item .right-content .content .email .drop-down, .right-content .content .email .form-item .drop-down1, .form-item .right-content .content .email .drop-down1 {
     width: 424px; }
+
 .right-content .save-btn {
   width: 460px;
   padding: 10px 0px;
@@ -1874,5 +1908,3 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
       vertical-align: middle;
       color: #333333;
       font-size: 15px; }
-
-/*# sourceMappingURL=main.css.map */
