添加方案车无结果提醒。

--- a/templates/share/base_layout_with_search.html
+++ b/templates/share/base_layout_with_search.html
@@ -162,6 +162,8 @@
             $.get('{% url "gift_platform_site:cart" %}', function(response) {
                 if (response.length === 0) {
                     $('.cart-info').text('您没有礼品方案');
+                    $('.cart-info .product-list ul').empty();
+                    $('.cart-info .product-list ul').html('<div class="no-data">暂无商品</div>');
                 } else {
                     $('.cart-info').text('包含' + response.length + '个商品');
                 }
