更新详情的模板。

--- a/templates/products/details.html
+++ b/templates/products/details.html
@@ -45,3 +45,9 @@
         </div>
     </div>
 </div>
+<script>
+    (function($){
+        $('.add-cart-btn').click(function(){
+        });
+    })(jQuery);
+</script>
