--- a/templates/products/details.html
+++ b/templates/products/details.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <div class="bread-crumb">
-        <a href="#">首页</a>><a href="#">品牌专区</a>><a href="#">张三牌茶具</a>
+        <a href="/home">首页</a>>商品详情</a>
     </div>
     <div class="product-details-wrap">
         <div class="product-details-header">
